	- GetOverlayLayerFrameData(int Layer) - Same as above for the overlay animation.
* AnimationFrame:
	- GetStartFrame()
	- GetEndFrame()
* Point:
	- [Get/Set]Color() - Allows setting a color per-Point; colors are lerped between points
	- [Get/Set]IsWorldSpace() - Automatically converts this Point's position from worldspace to screenspace when rendering
/newline/
Modified:
* Beam:
	- Beams now have an inherent Sprite object, no longer prone to losing its Sprite reference
	- Changes made to the Sprite provided in the constructor will not be reflected in the Beam, and vis-versa
	- Wrap[S/T]Mode are automatically set to proper values for the spritesheet to loop vertically
* "Hush AI Fixes" patch will no longer be applied during daily runs.
* Deal rooms with variants above 99 will now also generate in Red Rooms
/newline/
Fixes:
	- 
/newline/
v1.0.11c -
Additions:
* CharacterMenu:
	- [Get/Set]ActiveStatus()
	- CharacterMenuStatus enum
/newline/
Fixes:
	- Fixed vanilla game crash caused by Hornfel trying to enter new door after losing minecart.
	- Fixed SetRail index checks
/newline/
v1.0.11b -
Bug fixes:
	- Fixed a crash that could occur randomly when using custom item pools
/newline/
v1.0.11a -
Bug fixes:
	- Fixed a division by zero that occured when shuffling an empty item pool
/newline/
v1.0.11 -
Additions:
* Itempools:
	- Added support for new custom itempools through itempools.xml on the content folder
	- Isaac.GetPoolIdByName(poolName) - returns the id of a given custom pool. Returns -1 if the pool is not found.
	- Room:SetItemPool(ItemPoolType PoolType) - Sets the pool to use when the game needs to generate random collectibles in the current room.
	- Room:GetItemPool(int Seed, boolean Raw) - Retrieves the pooltype the game would use to generate random collectibles in the current room.
	- ItemPool:GetNumItemPools() - Retrieves the total number of itempools in the game, including custom itempools.
* GenericPrompt:
	- GenericPrompt constructor