@@ -58,6 +58,9 @@ __thiscall bool Entity_Familiar::CanCharm();
 "538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505381ece800000056":
 __thiscall void Entity_Familiar::WispInit();
 
+"538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505381ecd0000000a1????????33c58945??5657508d45??64a3????????8bf9897d":
+__thiscall bool Entity_Familiar::wisp_kill();
+
 
 struct Entity_Familiar depends (ColorMod, ItemConfig_Item) : public Entity {
 {{
